<resources>
    <string name="app_name">AndroIDHunt</string>
    <string name="todo">TODO</string>
    <string name="textview">Android Bug Bounty</string>
    <string name="let_s_start_beast">Let\'s Start The Beast</string>
    <string name="infobtn">Basics</string>
    <string name="basics_about_android">Basics About Android</string>
    <string name="basicbtn">Basics</string>
    <string name="resourece">Resources</string>
    <string name="tnground">Training Ground</string>
    <string name="setting">Settings</string>
    <string name="owner">HeyDarklord.Property</string>
    <string name="basicandro">Basics of Android</string>
    <string name="aboutandroidhunt">Android Hunting Described</string>
    <string name="cmnvul">Common Vulnerabilities</string>
    <string name="common_vulnerabilities">Common Vulnerabilities</string>
    <string name="tools">Tools</string>
    <string name="what_is_android">What is Android?✌</string>
    <string name="whtandro">Hey! Everyone In This Section We Will Talk About That is Android Like Most of Us Using Android Devices But We Don\'t Know Actually What it is So Let\'s Talk About it So if We Google \"Android"\ It will Show Us Like This😉</string>
    <string name="nxtandro">So Basically As You Can See Here That Android is A Mobile Operating System Based on Linux😊.Now We Will Dive More Deep in What is Android😉 </string>
    <string name="strcuandro">Structure of Android✌</string>
    <string name="nxtstrcandro">Now Before Jumping into Android Bug Bounty And We Will Look into What are the Things Which Makes Android App Like We Will Talk About XMLs, Classes And Many More!😉. Here We Will Not Talk About All XMLs or Classes We will Talk About Important XMLs and Classes</string>
    <string name="menifast">Why Android Manifest First</string>
    <string name="mendec">According To Google Manifest is XML File Which Contains Activities, Broadcast Receiver, Intent Filters, Permissions and Application Components Now if You Want to Learn in Deep About These Things Just Google it😉 Now Let\'s Talk About Why Manifest is First File You Have to Look For, As I Said That It Contains Useful Information Sometimes What Dev😊. Do That They Will Store Something Very Useful In This, Same Scenario Happens With Strings.xml Will Talk About Later😊.</string>
    <string name="tip1"> Mistakes Happened When I Didn\'t Read Manifest File Like As I Said it Contains Info. About Activities So Whenever A WebView Vulnerability Comes I was Trying To Exploit and A Error Msg Popup That This Activity Doesn\'t Exists So Look into Manifest Deeply😊</string>
    <string name="tip_01">Tip:01✌</string>
    <string name="string">Strings.xml Why It is Important</string>
    <string name="strdes">After Manifest File String.xml is The Most Important File In Case of Bug Bounty There are Two Case Scenario on Static Analysis One Which API_KEYS and Sensitive Information Saved in Strings.XML And Second is in Java Class(.class) or In Kotlin File(.kt)😊.</string>
    <string name="tip_02">Tip:02✌</string>
    <string name="tip02">API Keys are Not So Difficult to Find in Strings.XML And In This TIP I Will Say That if A Program Has Too Many Submission Then I Will Say Not Go For This But You can Go For KEYS Stored in class or kt File in That Case This Could Work😉</string>
    <string name="classes">Why Classes is Important and Most Difficult😊</string>
    <string name="clsdec">Now The Thing You Will Notice That I am Not Saying Any About This Because You Just Need Understand The Code, What\'s Actually Scene is.😉</string>
    <string name="what_req">The Biggest Question After Learning Basics About Android That Is There Any Pre-Requirements For Android Bug Hunting😊</string>
    <string name="req_dec">I Think There are Requirements Not Necessary But If You Have These Then You were Able to Find More Bugs So Let\'s Talk About What is Requirements For It </string>
    <string name="l_j_k_t">Learn Any Language Java Or Kotlin</string>
    <string name="l_j_k_d">I Would Prefer Go For Java Because Kotlin Can be Converted to Java File But It Depends On You What You want To Learn😊. By Learning These You will Get That What Actually is Happening How Code is Working and Stuff Like That✌</string>
    <string name="type_ana">Types of Android Analysis</string>
    <string name="type_ana_dec">There are Two Types of Analysis And Both Plays a Major Part in Android Analysis</string>
    <string name="st_ana">Static Analysis</string>
    <string name="st_ana_des">Static Analysis Means Where You Look into Code and Uncovers a Bug Now it\'s Most Time Consuming Thing But It is Necessary</string>
    <string name="dy_ana">Passive Analysis or Dynamic</string>
    <string name="dy_ana_des">So Passive Analysis Where You Look into Basic Functionality of Like Logs And Receiving Req. in Burp  </string>
    <string name="istittle">Common Issues✌</string>
    <string name="isdec">Now In This Section We Will Talk About Common Issues </string>
    <string name="owasp">OWASP TOP 10</string>
    <string name="owasp1">M1: Improper Platform Uses</string>
    <string name="m1">In This Section We Find And Report About MisUses of Different Components Like WebView And Intent of Mobile Operating System </string>
    <string name="owasp2">M2: Insecure Data Storage</string>
    <string name="m2">In This Section If An App is Storing Information On Root Folder Like Password and Email and Other Information And If Mobile is Lost Then Attacker Can Access These Things  </string>
    <string name="tipm2">So As Per My Experience I Found a Bug on App Where Everything is Stored On Logs and If Attacker Gets Access to Phone For 10 Sec Then He Will Get All Information About User😊 </string>
    <string name="m3">M3: Insecure Communication</string>
    <string name="owasp3">In This I Found Two Scenarios First One is Poor SSL or Certificate is Expired And Second One is Uses of HTTP Header on Sensitive Actions</string>
    <string name="formore">For More About These Go On Owasp Link Will Be in Resource Section</string>
    <string name="minebugs">What I Find Mostly or What\'s My Keymap to Find</string>
    <string name="jadx">Why Jadx | Personal Fav.✌</string>
    <string name="jadec">The Reason Behind Choosing Jadx Because I was Using Dex2Jar And JdGui They were Good But Jadx Give me More Understandable UI, More Useful Search </string>
    <string name="apktool">APKTOOL Another Good One</string>
    <string name="apkdec">As I Tried APKTOOL I Found That it is Also a Good Tool But One Thing I Didn\'t Liked About That it Converts in .SMALI But Yes There are Tools Convert SMALI to Java Class  </string>
    <string name="jdd2j">Dex2Jar And JD-Gui | Good Combo</string>
    <string name="jddec">I Used it Before Jadx Introduced to Me But It is a Good Tool First Decompile Apk via DEX2JAR and Then Open With Jd-GUi(Windows), One Thing I Didn\'t Liked About JD-GUI That It will Not Show You XML Files</string>

    <string name="MyCred">This is An Example, This Can be Encrypted or Not</string>
    <string name="myapi">MyAPI</string>


</resources>
