<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".basicandroActivity"
    android:background="@color/bck"
    >
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/what_is_android"
            android:textStyle="bold"
            android:textColor="@color/TextColor"
            android:fontFamily="@font/ruluko"
            android:textSize="26dp"
            android:layout_marginTop="10dp"
            android:id="@+id/txt1"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ruluko"
            android:text="@string/whtandro"
            android:textColor="#585858"
            android:textSize="18dp"

            />
        <ImageView
            android:layout_width="269dp"
            android:layout_height="335dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/android"
            android:layout_marginLeft="75dp"
            android:layout_marginRight="75dp"
            android:layout_gravity="center"
            />

        <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ruluko"
        android:text="@string/nxtandro"
        android:textColor="#585858"
        android:textSize="18dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/strcuandro"
            android:textStyle="bold"
            android:textColor="@color/TextColor"
            android:fontFamily="@font/ruluko"
            android:textSize="26dp"
            android:layout_marginTop="10dp"
            android:id="@+id/txt2"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ruluko"
            android:text="@string/nxtstrcandro"
            android:textColor="#585858"
            android:textSize="18dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menifast"
            android:textStyle="bold"
            android:textColor="@color/TextColor"
            android:fontFamily="@font/ruluko"
            android:textSize="26dp"
            android:layout_marginTop="10dp"
            android:id="@+id/txt3"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ruluko"
            android:text="@string/mendec"
            android:textColor="#585858"
            android:textSize="18dp"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:src="@drawable/exampleandro"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tip_01"
            android:textStyle="bold"
            android:textColor="@color/TextColor"
            android:fontFamily="@font/ruluko"
            android:textSize="23dp"
            android:layout_marginTop="10dp"
            android:id="@+id/txt4"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ruluko"
            android:text="@string/tip1"
            android:textColor="#585858"
            android:textSize="18dp"/>



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/string"
            android:textStyle="bold"
            android:textColor="@color/TextColor"
            android:fontFamily="@font/ruluko"
            android:textSize="26dp"
            android:layout_marginTop="10dp"
            android:id="@+id/txt5"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ruluko"
            android:text="@string/strdes"
            android:textColor="#585858"
            android:textSize="18dp"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:src="@drawable/examplestring"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tip_02"
            android:textStyle="bold"
            android:textColor="@color/TextColor"
            android:fontFamily="@font/ruluko"
            android:textSize="23dp"
            android:layout_marginTop="10dp"
            android:id="@+id/txt6"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ruluko"
            android:text="@string/tip02"
            android:textColor="#585858"
            android:textSize="18dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/classes"
            android:textStyle="bold"
            android:textColor="@color/TextColor"
            android:fontFamily="@font/ruluko"
            android:textSize="26dp"
            android:layout_marginTop="10dp"
            android:id="@+id/txt7"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ruluko"
            android:text="@string/clsdec"
            android:textColor="#585858"
            android:textSize="18dp"/>




    </LinearLayout>





</ScrollView>


