<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".bugActivity"
    android:background="@color/bck">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/what_req"
            android:textStyle="bold"
            android:textColor="@color/TextColor"
            android:fontFamily="@font/ruluko"
            android:textSize="26dp"
            android:layout_marginTop="10dp"
            android:id="@+id/txt1"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ruluko"
            android:text="@string/req_dec"
            android:textColor="#585858"
            android:textSize="18dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/l_j_k_t"
            android:textStyle="bold"
            android:textColor="@color/TextColor"
            android:fontFamily="@font/ruluko"
            android:textSize="26dp"
            android:layout_marginTop="10dp"
            android:id="@+id/txt2"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:src="@drawable/jvk"
            android:layout_gravity="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ruluko"
            android:text="@string/l_j_k_d"
            android:textColor="#585858"
            android:textSize="18dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/type_ana"
            android:textStyle="bold"
            android:textColor="@color/TextColor"
            android:fontFamily="@font/ruluko"
            android:textSize="26dp"
            android:layout_marginTop="10dp"
            android:id="@+id/txt3"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ruluko"
            android:text="@string/type_ana_dec"
            android:textColor="#585858"
            android:textSize="18dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/st_ana"
            android:textStyle="bold"
            android:textColor="@color/TextColor"
            android:fontFamily="@font/ruluko"
            android:textSize="26dp"
            android:layout_marginTop="10dp"
            android:id="@+id/txt4"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ruluko"
            android:text="@string/st_ana_des"
            android:textColor="#585858"
            android:textSize="18dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dy_ana"
            android:textStyle="bold"
            android:textColor="@color/TextColor"
            android:fontFamily="@font/ruluko"
            android:textSize="26dp"
            android:layout_marginTop="10dp"
            android:id="@+id/txt5"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ruluko"
            android:text="@string/dy_ana_des"
            android:textColor="#585858"
            android:textSize="18dp"/>

    </LinearLayout>

</ScrollView>